0.8-9
o register native routines

0.8-8
o correct omegahat web link
o replace "fix..." . methods with workspace independent "edit"-methods

0.8-7
o enable newuoa and bobyqa optimizers from package minqa
o small updates to help files and vignette

0.8-6
o use tcltk::-calls
o enable automatic vignette index
o add new model "diffusion_barrier.R" to doc/examples

0.8-5
o requireNamespace instead of require for tcltk
  

0.8-4
o addtoenv for parameters 
  (experimental and only for class indbasedModel)

0.8-3
o double buffering for animation plots

0.8-2
o removed obsolete files in installation
o moved vignette source files to /vignettes
o update of package help page

0.8-1
o fix bug in seedfill function

0.8
o periodic boundary conditions in neighbours
o compatibility tweaks
o updated examples

0.7-2
o remove two other obsolete files from inst/doc

0.7-1
o fix documentation notes and a warning 

0.7
o "inputs" is now passed explicitly to sim "odeModel"
o fix namespace issue


0.6-11
o fixed NOTE about missing depends on lattice in one of the examples

0.6-10
o moved examples to /doc/examples
o improve documentation of 'observer'
o fixed bug that "time" was called "times" in out of iteration solver
o documentation updates and fixes

0.6-9

o documentation fixes

0.6-8
o remove dependency on FME (until FME is released)
o documentation improvements
o release

0.6-7
o fixed bug in documentation example for iteration-solver
o fixed documentation warning for plot-methods

0.6-6
o tested on Linux x64 with gcc and Sun Studio 12 compilers
o vignette improvements

0.6-5
o changed: simecol.cpp to simecol.c
  to avoid C++ (we didn't need it yet)

0.6-4
o try to fix comptibility issue with Sun Studio compiler

0.6-3
o remove Rdversion, back compatibility with R 2.8.1
o submitted to CRAN

0.6-2
o fitOdeModel supports now PORT algorithm (nlminb)
o documentation improvements
o first version of "simecol-howto"
o new utility mixNamedVec
o submitted to CRAN

0.6-1