@@ -87,75 +87,3 @@ sEdit <- function(x, title="Please enter values:") {
     return(ret)
 }
 
-setGeneric("fixParms", function(x) standardGeneric("fixParms"))
-
-setGeneric("fixInit", function(x) standardGeneric("fixInit"))
-
-setGeneric("fixTimes", function(x) standardGeneric("fixTimes"))
-
-setMethod("fixParms", "simObj",
-  function(x) {
-    sl   <- "parms"
-    subx <- substitute(x)
-    if (is.name(subx))
-       subx <- deparse(subx)
-    if (!is.character(subx) || length(subx) != 1)
-        stop("this function requires a name")
-    if (!(sl %in% slotNames(x)))
-        stop(paste("'", sl, "' does not exist in ", subx, sep=""))
-    parent <- parent.frame()
-    ret <- sEdit(slot(x, sl), sl)
-    slot(x, sl) <- ret
-    ## interactive function is assumed to work
-    ## in global environment
-    assign(subx, x, envir=.GlobalEnv)
-  }
-)
-
-setMethod("fixTimes", "simObj",
-  function(x) {
-    sl <- "times"
-    subx <- substitute(x)
-    if (is.name(subx))
-       subx <- deparse(subx)
-    if (!is.character(subx) || length(subx) != 1)
-        stop("this function requires a name")
-    if (!(sl %in% slotNames(x)))
-        stop(paste("'", sl, "' does not exist in ", subx, sep=""))
-    parent <- parent.frame()
-    if (sum(names(slot(x, sl)) == c("from", "to", "by"))==3) {
-      ret <- sEdit(slot(x, sl), sl)
-    }else {
-      ret <- edit(slot(x, sl))
-    }
-    slot(x, sl) <- ret
-    ## interactive function is assumed to work
-    ## in global environment
-    assign(subx, x, envir=.GlobalEnv)
-
-  }
-)
-
-setMethod("fixInit", "simObj",
-  function(x) {
-    sl <- "init"
-    subx <- substitute(x)
-    if (is.name(subx))
-       subx <- deparse(subx)
-    if (!is.character(subx) || length(subx) != 1)
-        stop("this function requires a name")
-    if (!(sl %in% slotNames(x)))
-        stop(paste("'", sl, "' does not exist in ", subx, sep=""))
-    parent <- parent.frame()
-    ret <- sEdit(slot(x, sl), sl)
-    slot(x, sl) <- ret
-    ## interactive function is assumed to work
-    ## in global environment
-    assign(subx, x, envir=.GlobalEnv)
-
-  }
-)
-
-
-
-
